replace import by an array

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@ button {
 <body>
   
   <script src="js/scripts.js">
-  import { animals } from 'animalShelter.data';
+
+    var animals: [
+     [Edgar the Cat,../../static/images/catOnTower.jpg,Enjoys adventures,Edgar],
+     [Summer the Dog,../../static/images/dogTrick.gif,Loves chasing tail,Summer],
+     [Llarry the Llama,../../static/images/llama.jpg,Likes snacks and cuddles,Llary]
+    ]
+    
 let title = document.createElement('h1');
 
 title.textContent = 'Adoptable Animals';
