--- a/index.html
+++ b/index.html
@@ -55,10 +55,21 @@ button {
   
   <script src="js/scripts.js">
 
-    var animals: [
-     [Edgar the Cat,../../static/images/catOnTower.jpg,Enjoys adventures,Edgar],
-     [Summer the Dog,../../static/images/dogTrick.gif,Loves chasing tail,Summer],
-     [Llarry the Llama,../../static/images/llama.jpg,Likes snacks and cuddles,Llary]
+    var animals = [
+  ['Edgar the Cat',
+  'https://learn.grasshopper.app/static/images/catOnTower.jpg',
+  'Enjoys adventures',
+  'Edgar'],
+  
+  ['Summer the Dog',
+  'https://learn.grasshopper.app/static/images/dogTrick.gif',
+  'Loves chasing tail',
+  'Summer'],
+
+  ['Llarry the Llama',
+  'https://learn.grasshopper.app/static/images/llama.jpg',
+  'Likes snacks and cuddles',
+  'Llary']
     ]
     
 let title = document.createElement('h1');
