change btn to name
let button = document.createElement('button');
button.textContent = animal[3];
document.body.appendChild(button);

button.addEventListener('click', () => {
if(button.textContent === animal[3]){button.textContent = "Liked!";}
else {button.textContent = animal[3];}

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<meta name="" content="">
 	<link rel="stylesheet" href="css/styles.css?v=1.0">
 
-  <script>
-var animals = [
+	<script>
+		var animals = [
 ['Edgar the Cat',
 'https://learn.grasshopper.app/static/images/catOnTower.jpg',
 'Enjoys adventures',
@@ -48,16 +48,16 @@ description.textContent = animal[2];
 document.body.appendChild(description);
 
 let button = document.createElement('button');
-button.textContent = 'Like';
+button.textContent = animal[3];
 document.body.appendChild(button);
 
 button.addEventListener('click', () => {
-if(button.textContent === 'Like'){button.textContent = "Liked!";}
-else {button.textContent = 'Like';}
+if(button.textContent === animal[3]){button.textContent = "Liked!";}
+else {button.textContent = animal[3];}
 
 } )
 }
-   </script>
+	</script>
 
 	<style>
 		body {
