--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 'Llary']
 ]
 
-let title = document.createElement('h1');
-
+let titles = document.createElement('h1');
 title.textContent = 'Adoptable Animals';
-document.body.appendChild(title);
+document.body.appendChild(titles);
 
 for (let animal of animals) {
 
