--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 'Llary']
 ]
 
-let titles = document.createElement('h1');
-title.textContent = 'Adoptable Animals';
-document.body.appendChild(titles);
+let MyH1 = document.createElement('h1');
+MyH1.textContent = 'Adoptable Animals';
+document.body.appendChild(MyH1);
 
 for (let animal of animals) {
 
