--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
-
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="utf-8">
-
-	<title>The HTML5 Herald</title>
-	<meta name="description" content="">
-	<meta name="" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+<meta name="description" content="">
+<meta name="" content="">
+	
 	<script>
 		var animals = [
 ['Edgar the Cat',
@@ -24,7 +22,7 @@
 'https://learn.grasshopper.app/static/images/llama.jpg',
 'Likes snacks and cuddles',
 'Llary']
-]
+];
 
 let MyH1 = document.createElement('h1');
 MyH1.textContent = 'Adoptable Animals';
